--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Virtual Imaging Trials Improved the Transparency and Reliability of AI Systems in COVID-19 Imaging</h1>
+            <h1 class="title is-1 publication-title">The Utility of the Virtual Imaging Trials Methodology for Objective Characterization of AI Systems and Training Data</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
