--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <iframe 
           width="100%" 
           height="400" 
-          src="https://www.youtube.com/embed/ovk0laOLSLk?autoplay=1&controls=1&mute=1&loop=1&playlist=ovk0laOLSLk" 
+          src="https://www.youtube.com/embed/lc8GH8yFnxM?si=FO92OpZ7ut7NbdI1" 
           frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen>
