--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                       <span class="icon">
                         <i class="fas fa-globe"></i>
                       </span>
-                      <span>SPIE CAD(2022)</span>
+                      <span>SPIE CAD (2022)</span>
                     </a>
                   </span>                      
                     <!-- SPIE Phy. MedI 2022 abstract link -->
@@ -107,10 +107,10 @@
                       <span class="icon">
                         <i class="fas fa-globe"></i>
                       </span>
-                      <span>SPIE Phy. MedI(2022)</span>
+                      <span>SPIE Phy.MedI (2022)</span>
                     </a>
                   </span>
-                    <!-- Abadi et al. AJR(2020) -->
+                    <!-- Abadi et al. AJR (2020) -->
                     <span class="link-block">
                       <a href="https://doi.org/10.2214/AJR.20.23429" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
@@ -184,7 +184,27 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            The credibility of Artificial Intelligence (AI) models in medical imaging, particularly during
+            <strong>Purpose:</strong> The credibility of Artificial Intelligence (AI) models for medical imaging continues to
+be a challenge, affected by the diversity of models, the data used to train the models, and
+applicability of their combination to produce reproducible results for new data. In this work, we
+aimed to explore whether emerging Virtual Imaging Trials (VIT) methodologies can provide an
+objective resource to approach this challenge.
+<strong>Approach:</strong> The study was conducted for the case example of COVID-19 diagnosis using
+clinical and virtual computed tomography (CT) and chest radiography (CXR) processed with
+convolutional neural networks. Multiple AI models were developed and tested using 3D
+ResNet-like and 2D EfficientNetv2 architectures across diverse datasets.
+<strong>Results:</strong>  Model performance was evaluated using the area under the curve (AUC) and the
+DeLong method for AUC confidence intervals. The models trained on the most diverse
+datasets showed the highest external testing performance, with AUC values ranging from
+0.73-0.76 for CT and 0.70-0.73 for CXR. Internal testing yielded higher AUC values (0.77-0.85
+for CT and 0.77-1.0 for CXR), highlighting a substantial drop in performance during external
+validation, which underscores the importance of diverse and comprehensive training and
+testing data. Most notably, the VIT approach provided objective assessment of the utility of
+diverse models and datasets, while offering insight into the influence of dataset characteristics,
+patient factors, and imaging physics on AI efficacy.
+<strong>Conclusions:</strong>  The VIT approach enhances model transparency and reliability, offering
+nuanced insights into the factors driving AI performance and bridging the gap between
+experimental and clinical settings.|The credibility of Artificial Intelligence (AI) models in medical imaging, particularly during
 the COVID-19 pandemic, has been challenged by reproducibility issues and obscured clinical insights.<strong>To
 address these concerns, we propose a Virtual Imaging Trials (VIT) framework, utilizing both clinical and
 simulated datasets to evaluate AI systems</strong>. This study focuses on using convolutional neural networks (CNNs)
