--- a/index.html
+++ b/index.html
@@ -204,23 +204,7 @@ diverse models and datasets, while offering insight into the influence of datase
 patient factors, and imaging physics on AI efficacy.
 <strong>Conclusions:</strong>  The VIT approach enhances model transparency and reliability, offering
 nuanced insights into the factors driving AI performance and bridging the gap between
-experimental and clinical settings.|The credibility of Artificial Intelligence (AI) models in medical imaging, particularly during
-the COVID-19 pandemic, has been challenged by reproducibility issues and obscured clinical insights.<strong>To
-address these concerns, we propose a Virtual Imaging Trials (VIT) framework, utilizing both clinical and
-simulated datasets to evaluate AI systems</strong>. This study focuses on using convolutional neural networks (CNNs)
-for COVID-19 diagnosis using computed tomography (CT) and chest radiography (CXR). We developed and
-tested multiple AI models, 3D ResNet-like and 2D EfficientNetv2 architectures, across diverse datasets. Our
-evaluation metrics included the area under the curve (AUC). Statistical analyses, such as the DeLong method
-for AUC confidence intervals, were employed to assess performance differences. Our findings demonstrate
-that VIT provides a robust platform for objective assessment, revealing significant influences of dataset
-characteristics, patient factors, and imaging physics on AI efficacy. Notably, models trained on the most
-diverse datasets showed the highest external testing performance, with AUC values ranging from 0.73 to 0.76
-for CT and 0.70 to 0.73 for CXR. Internal testing yielded higher AUC values (0.77 to 0.85 for CT and 0.77
-to 1.0 for CXR), highlighting a substantial drop in performance during external validation, which underscores
-the importance of diverse and comprehensive training and testing data. <strong> This approach enhances model
-transparency and reliability, offering nuanced insights into the factors driving AI performance and bridging
-the gap between experimental and clinical settings. The study underscores the potential of VIT to improve
-the reproducibility and clinical relevance of AI systems in medical imaging</strong>.</p>
+experimental and clinical settings.</p>
         </div>
       </div>
     </div>
