--- a/index.html
+++ b/index.html
@@ -279,56 +279,20 @@ wide range of effective dose. Error bars correspond to 95% confidence interval.
 <!-- End image carousel -->
 
 
-
-
-
-
-
-
-<!-- Paper poster -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title">Pre-print</h2>
-
-      <iframe  src="static/pdfs/2308.09730v5.pdf" width="100%" height="550">
-          </iframe>
-        
-      </div>
-    </div>
-  </section>
-<!--End paper poster -->
-
-
-<!-- Paper poster -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title">SPIE CAD 2022 Presentation</h2>
-
-      <iframe  src="static/pdfs/CAD_12033-9-ct-covid19_tushar.pdf" width="100%" height="550">
-          </iframe>
-        
-      </div>
-    </div>
-  </section>
-<!--End paper poster -->
- 
-
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-@misc{tushar2024virtualimagingtrialsimproved,
-      title={Virtual imaging trials improved the transparency and reliability of AI systems in COVID-19 imaging}, 
+@misc{tushar2025utilityvirtualimagingtrials,
+      title={The Utility of the Virtual Imaging Trials Methodology for Objective Characterization of AI Systems and Training Data}, 
       author={Fakrul Islam Tushar and Lavsen Dahal and Saman Sotoudeh-Paima and Ehsan Abadi and W. Paul Segars and Ehsan Samei and Joseph Y. Lo},
-      year={2024},
+      year={2025},
       eprint={2308.09730},
       archivePrefix={arXiv},
       primaryClass={eess.IV},
       url={https://arxiv.org/abs/2308.09730}, 
-}        
+}       
       </code></pre>
     </div>
 </section>
