--- a/index.html
+++ b/index.html
@@ -376,6 +376,134 @@ wide range of effective dose. Error bars correspond to 95% confidence interval.
 </section>
 <!-- End Results / Figures Section -->
 
+<!-- Results / Figures Section -->
+<section class="section">
+  <div class="container">
+
+    <!-- Figure 1 -->
+    <div class="columns is-centered">
+      <div class="column is-9 has-text-centered">
+
+        <p class="subtitle has-text-centered">
+          <strong>Figure 1. Study design overview.</strong>
+          12,844 CT and 25,219 CXR images for COVID-19 diagnosis were collected from
+          13 multi-center clinical datasets. Models were evaluated using internal,
+          external, and virtually simulated testing cohorts.
+        </p>
+
+        <img src="static/images/Figure1.png"
+             alt="Study design overview"
+             style="max-width: 85%; height: auto;">
+
+      </div>
+    </div>
+
+    <!-- Figure 2 -->
+    <div class="columns is-centered">
+      <div class="column is-9 has-text-centered">
+
+        <p class="subtitle has-text-centered">
+          <strong>Figure 2. XCAT phantom example.</strong>
+          Four-dimensional extended cardiac-torso (XCAT) phantom developed at Duke
+          University (Abadi et al., AJR 2020).
+        </p>
+
+        <img src="static/images/Phantom_airways.png"
+             alt="XCAT phantom"
+             style="max-width: 75%; height: auto;">
+
+      </div>
+    </div>
+
+    <!-- Figure 3 -->
+    <div class="columns is-centered">
+      <div class="column is-9 has-text-centered">
+
+        <p class="subtitle has-text-centered">
+          <strong>Figure 3. Phantom development workflow.</strong>
+          Overview of COVID-19 computational phantom formation and simulated CT/CXR
+          image generation pipeline.
+        </p>
+
+        <img src="static/images/Phantom_formation.png"
+             alt="Phantom formation workflow"
+             style="max-width: 85%; height: auto;">
+
+      </div>
+    </div>
+
+    <!-- Figure 4 -->
+    <div class="columns is-centered">
+      <div class="column is-9 has-text-centered">
+
+        <p class="subtitle has-text-centered">
+          <strong>Figure 4. COVID-19 abnormalities in XCAT phantom.</strong>
+          Three distinct COVID-19 abnormality patterns with varying shapes embedded
+          in a four-dimensional XCAT phantom (Abadi et al., AJR 2020).
+        </p>
+
+        <img src="static/images/figure2.png"
+             alt="COVID abnormalities"
+             style="max-width: 80%; height: auto;">
+
+      </div>
+    </div>
+
+    <!-- Figure 5 -->
+    <div class="columns is-centered">
+      <div class="column is-9 has-text-centered">
+
+        <p class="subtitle has-text-centered">
+          <strong>Figure 5. Infection distribution.</strong>
+          Spatial distribution of COVID-19 infections within the XCAT phantom model.
+        </p>
+
+        <img src="static/images/Infection.png"
+             alt="COVID infection distribution"
+             style="max-width: 75%; height: auto;">
+
+      </div>
+    </div>
+
+    <!-- Figure 6 -->
+    <div class="columns is-centered">
+      <div class="column is-9 has-text-centered">
+
+        <p class="subtitle has-text-centered">
+          <strong>Figure 6. CT and CXR model performance.</strong>
+          Confusion matrix showing case-level COVID-19 detection performance across
+          training and testing datasets. AUC values are reported with 95% confidence
+          intervals.
+        </p>
+
+        <img src="static/images/result_ctcxr.png"
+             alt="CT vs CXR confusion matrix"
+             style="max-width: 90%; height: auto;">
+
+      </div>
+    </div>
+
+    <!-- Figure 7 -->
+    <div class="columns is-centered">
+      <div class="column is-9 has-text-centered">
+
+        <p class="subtitle has-text-centered">
+          <strong>Figure 7. Physics-based evaluation.</strong>
+          Performance comparison across CT and CXR modalities under varying imaging
+          dose conditions. Error bars represent 95% confidence intervals.
+        </p>
+
+        <img src="static/images/imageresult.png"
+             alt="Physics-based evaluation results"
+             style="max-width: 90%; height: auto;">
+
+      </div>
+    </div>
+
+  </div>
+</section>
+<!-- End Results / Figures Section -->
+
 
 
 <!--BibTex citation -->
