--- a/index.html
+++ b/index.html
@@ -213,168 +213,7 @@ experimental and clinical settings.</p>
 <!-- End paper abstract -->
 
 
-<!-- Image carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/Figure1.png" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Study design overview. <strong>12,844 CT and 25,219 CXR </strong>images for COVID-19 diagnosis were drawn from 13 clinical datasets
-comprising single or multiple centers (Supplement Fig. 1-2). Multiple deep-learning-based models were developed using these clinical
-datasets. All models underwent internal testing (held-out from the same training dataset) and external testing (all other datasets). Further
-external testing was performed using virtually simulated CT and CXR images to analyze effect of patient and imaging physics factors.</h2>
-      </div>
 
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/Phantom_airways.png" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-         Example of 4D extended cardiac-torso (XCAT) phantom developed at Duke University. Abadi et al. AJR(2020)        
-        </h2>
-      </div>      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/Phantom_formation.png" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          An overview COVID-19 computation phantoms development and simulated CT and CXR images.        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/figure2.png" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-         Four-dimensional extended cardiac-torso (XCAT) phantom developed at Duke University shows three coronavirus disease (COVID-19) abnormalities with different shapes.Abadi et al. AJR(2020)</h2>
-     </div>
-     <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/Infection.png" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        COVID-19 Infection distributions in developed Four-dimensional extended cardiac-torso (XCAT) phantom</h2>
-    </div>
-    <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/result_ctcxr.png" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Confusion matrix of case-level COVID-19 detection performance of (a) CT and (b) CXR models. Training dataset is shown in rows
-and testing dataset in columns; diagonal represents internal validation, while off-diagonal entries are external testing. Additional external
-testing on simulated images is shown on the right. Performance is reported as receiver operating characteristic area under the curve with
-95% confidence interval.</h2>
-    </div>
-
-    <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/imageresult.png" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Simulated images were used to evaluate physics-based factors. Although models consistently performed better on CT over CXR, the
-differences were not significant at the shared dose of 0.3 mSv. Within each modality, performances were also not significantly different across a
-wide range of effective dose. Error bars correspond to 95% confidence interval.
-      </h2>
-    </div>  </div>
-</div>
-</div>
-</section>
-<!-- End image carousel -->
-
-
-
-<!-- Results / Figures Section -->
-<section class="section">
-  <div class="container">
-
-    <!-- Figure 1 -->
-    <div class="columns is-centered">
-      <div class="column is-10 has-text-centered">
-        <img src="static/images/Figure1.png" alt="Study design overview">
-        <p class="subtitle has-text-centered">
-          <strong>Study design overview.</strong>
-          12,844 CT and 25,219 CXR images for COVID-19 diagnosis were drawn from
-          13 clinical datasets comprising single or multiple centers (Supplement Fig. 1–2).
-          Multiple deep-learning-based models were developed using these datasets.
-          All models underwent internal testing (held-out from the same training dataset)
-          and external testing (all other datasets). Additional external testing was performed
-          using virtually simulated CT and CXR images to analyze the effects of patient
-          and imaging physics factors.
-        </p>
-      </div>
-    </div>
-
-    <!-- Figure 2 -->
-    <div class="columns is-centered">
-      <div class="column is-10 has-text-centered">
-        <img src="static/images/Phantom_airways.png" alt="XCAT phantom example">
-        <p class="subtitle has-text-centered">
-          Example of a four-dimensional extended cardiac-torso (XCAT) phantom
-          developed at Duke University (Abadi et al., AJR 2020).
-        </p>
-      </div>
-    </div>
-
-    <!-- Figure 3 -->
-    <div class="columns is-centered">
-      <div class="column is-10 has-text-centered">
-        <img src="static/images/Phantom_formation.png" alt="Phantom formation workflow">
-        <p class="subtitle has-text-centered">
-          Overview of COVID-19 computational phantom development and the generation
-          of simulated CT and CXR images.
-        </p>
-      </div>
-    </div>
-
-    <!-- Figure 4 -->
-    <div class="columns is-centered">
-      <div class="column is-10 has-text-centered">
-        <img src="static/images/figure2.png" alt="COVID-19 abnormalities in XCAT phantom">
-        <p class="subtitle has-text-centered">
-          Four-dimensional extended cardiac-torso (XCAT) phantom showing three
-          COVID-19 abnormalities with different shapes (Abadi et al., AJR 2020).
-        </p>
-      </div>
-    </div>
-
-    <!-- Figure 5 -->
-    <div class="columns is-centered">
-      <div class="column is-10 has-text-centered">
-        <img src="static/images/Infection.png" alt="COVID-19 infection distribution">
-        <p class="subtitle has-text-centered">
-          Distribution of COVID-19 infections within the developed four-dimensional
-          extended cardiac-torso (XCAT) phantom.
-        </p>
-      </div>
-    </div>
-
-    <!-- Figure 6 -->
-    <div class="columns is-centered">
-      <div class="column is-10 has-text-centered">
-        <img src="static/images/result_ctcxr.png" alt="Confusion matrix CT vs CXR">
-        <p class="subtitle has-text-centered">
-          Confusion matrix of case-level COVID-19 detection performance for
-          (a) CT and (b) CXR models. Training datasets are shown in rows and testing
-          datasets in columns. Diagonal entries represent internal validation,
-          while off-diagonal entries indicate external testing. Additional testing
-          using simulated images is shown on the right. Performance is reported as
-          AUC with 95% confidence intervals.
-        </p>
-      </div>
-    </div>
-
-    <!-- Figure 7 -->
-    <div class="columns is-centered">
-      <div class="column is-10 has-text-centered">
-        <img src="static/images/imageresult.png" alt="Physics-based evaluation results">
-        <p class="subtitle has-text-centered">
-          Evaluation of physics-based factors using simulated images. Models
-          consistently performed better on CT than CXR; however, differences were
-          not statistically significant at a shared dose of 0.3 mSv. Within each
-          modality, performance remained stable across a wide range of effective
-          doses. Error bars indicate 95% confidence intervals.
-        </p>
-      </div>
-    </div>
-
-  </div>
-</section>
-<!-- End Results / Figures Section -->
 
 <!-- Results / Figures Section -->
 <section class="section">
@@ -385,7 +224,7 @@ wide range of effective dose. Error bars correspond to 95% confidence interval.
       <div class="column is-9 has-text-centered">
 
         <p class="subtitle has-text-centered">
-          <strong>Figure 1. Study design overview.</strong>
+          <strong>Study design overview.</strong>
           12,844 CT and 25,219 CXR images for COVID-19 diagnosis were collected from
           13 multi-center clinical datasets. Models were evaluated using internal,
           external, and virtually simulated testing cohorts.
@@ -403,7 +242,7 @@ wide range of effective dose. Error bars correspond to 95% confidence interval.
       <div class="column is-9 has-text-centered">
 
         <p class="subtitle has-text-centered">
-          <strong>Figure 2. XCAT phantom example.</strong>
+          <strong>XCAT phantom example.</strong>
           Four-dimensional extended cardiac-torso (XCAT) phantom developed at Duke
           University (Abadi et al., AJR 2020).
         </p>
@@ -420,7 +259,7 @@ wide range of effective dose. Error bars correspond to 95% confidence interval.
       <div class="column is-9 has-text-centered">
 
         <p class="subtitle has-text-centered">
-          <strong>Figure 3. Phantom development workflow.</strong>
+          <strong>Phantom development workflow.</strong>
           Overview of COVID-19 computational phantom formation and simulated CT/CXR
           image generation pipeline.
         </p>
@@ -437,7 +276,7 @@ wide range of effective dose. Error bars correspond to 95% confidence interval.
       <div class="column is-9 has-text-centered">
 
         <p class="subtitle has-text-centered">
-          <strong>Figure 4. COVID-19 abnormalities in XCAT phantom.</strong>
+          <strong>COVID-19 abnormalities in XCAT phantom.</strong>
           Three distinct COVID-19 abnormality patterns with varying shapes embedded
           in a four-dimensional XCAT phantom (Abadi et al., AJR 2020).
         </p>
@@ -454,7 +293,7 @@ wide range of effective dose. Error bars correspond to 95% confidence interval.
       <div class="column is-9 has-text-centered">
 
         <p class="subtitle has-text-centered">
-          <strong>Figure 5. Infection distribution.</strong>
+          <strong>Infection distribution.</strong>
           Spatial distribution of COVID-19 infections within the XCAT phantom model.
         </p>
 
@@ -470,7 +309,7 @@ wide range of effective dose. Error bars correspond to 95% confidence interval.
       <div class="column is-9 has-text-centered">
 
         <p class="subtitle has-text-centered">
-          <strong>Figure 6. CT and CXR model performance.</strong>
+          <strong>CT and CXR model performance.</strong>
           Confusion matrix showing case-level COVID-19 detection performance across
           training and testing datasets. AUC values are reported with 95% confidence
           intervals.
@@ -488,7 +327,7 @@ wide range of effective dose. Error bars correspond to 95% confidence interval.
       <div class="column is-9 has-text-centered">
 
         <p class="subtitle has-text-centered">
-          <strong>Figure 7. Physics-based evaluation.</strong>
+          <strong>Physics-based evaluation.</strong>
           Performance comparison across CT and CXR modalities under varying imaging
           dose conditions. Error bars represent 95% confidence intervals.
         </p>
