--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </a>
                   </span>                  <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://gitlab.oit.duke.edu/cvit-public/cvit_revicovid19" target="_blank"
+                    <a href="https://github.com/fitushar/CVIT_ReviCOVID19" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
